<resources>
    <string name="app_name">E-Pertanian</string>
    <string-array name="daftar_kegiatan">

        <item>Irigasi</item>
        <item>Watering</item>
        <item>Sprinkle</item>
        <item>Pemupukan</item>
        <item>Penyemprotan Pestisida</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter note here..</string>
    <string name="search">Search your notes</string>

</resources>