<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note.Notes"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/notes"
        android:fontFamily="@font/manrope_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/Primariy"
        android:paddingLeft="@dimen/_10sdp" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:searchHintIcon="@string/app_name"
        app:searchIcon="@drawable/ic_search"
        app:queryHint="@string/search"
        app:iconifiedByDefault="false"
        android:theme="@style/Theme.OverlaySearch"
        android:background="@drawable/background"
        android:id="@+id/searchView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabBtnCreateNote"
        android:src="@drawable/ic_tambah"
        android:backgroundTint="@color/Primariy"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/_20sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>