<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note.AddNoteActivity"
    android:background="#006C32">

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_tick"
        app:tint="@color/ColorWhite"
        android:layout_marginRight="@dimen/_10sdp" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@id/imgDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:maxLines="1"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/manrope_bold"
        android:ellipsize="end"
        android:hint="@string/notes_title"/>


    <LinearLayout
        android:id="@+id/li"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:background="@color/ColorBlue" />


        <EditText
            android:id="@+id/etNoteSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:fontFamily="@font/manrope_reguler"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/_10ssp"
            android:textColorHint="@color/ColorGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/notes_sub_title"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/li"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:inputType="textMultiLine"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/manrope_reguler"
        android:hint="@string/notes_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>